# vanity-ed25519

./: Cargo.toml  README.md  flake.nix
src/: g_mul.rs  main.rs
